examples/pos/namer/qualified.effekt

def infixPlus(n: Int, m: Int): Int = {
  println("Adding " ++ n.show ++ " and " ++ m.show)
  effekt::infixPlus(n, m)
}

def main() = {
  println(effekt::infixPlus(1, 2).show)
  println(infixPlus(1, 2).show)
}
