examples/neg/issue1404_2.effekt
def test { f: (Int) => Int } : Int =
 f() // ERROR arguments

def main() = println(test { n => n })
